# taskman

./: .gitignore  README.md  Readme.md  autoinstall.sh  config.h.in  install.sh  meson.build  meson_options.txt  taskman.pro
data/: meson.build
data/icons/: meson.build
other/: config.diff  config.h
po/: LINGUAS
src/: app-manager.c  app-manager.h  main.c  meson.build  process-monitor.c  process-monitor.h  process-statusbar.c  process-statusbar.h  process-tree-model.c  process-tree-model.h  process-tree-view.c  process-tree-view.h  process-window.c  process-window.h  settings-dialog.c  settings-dialog.h  settings.c  settings.h  task-manager-bsd.c  task-manager-freebsd.c  task-manager-linux.c  task-manager-skel.c  task-manager-solaris.c  task-manager.c  task-manager.h
